Added skeleton classes for global variable, past vulnerabilities, privileged calls and provenance analyses. I'll now move the relevant code from SoaapPass.cpp to these classes.

--- a/SoaapPass/CMakeLists.txt
+++ b/SoaapPass/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_llvm_loadable_module(libsoaap
   SoaapPass.cpp
   Common/Sandbox.cpp
+  Analysis/GlobalVariableAnalysis.cpp
+  Analysis/PastVulnerabilityAnalysis.cpp
+  Analysis/PrivilegedCallAnalysis.cpp
+  Analysis/ProvenanceAnalysis.cpp
   Analysis/InfoFlow/AccessOriginAnalysis.cpp
   Analysis/InfoFlow/InfoFlowAnalysis.cpp
   Analysis/InfoFlow/SandboxPrivateAnalysis.cpp
