--- a/soaap/CMakeLists.txt
+++ b/soaap/CMakeLists.txt
@@ -25,9 +25,15 @@ add_llvm_library(SOAAP
   OS/Sandbox/Capsicum.cpp
   OS/Sandbox/SandboxPlatform.cpp
   OS/Sandbox/Seccomp.cpp
+  Report/IR/Report.cpp
+  Report/IR/SourceLocation.cpp
+  Report/IR/Vulnerability.cpp
+  Report/Render/ConsoleRenderer.cpp
+  Report/Render/JSONRenderer.cpp
   Util/CallGraphUtils.cpp
   Util/ClassHierarchyUtils.cpp
   Util/ContextUtils.cpp
+  Util/DebugUtils.cpp
   Util/LLVMAnalyses.cpp
   Util/PrettyPrinters.cpp
   Util/SandboxUtils.cpp
